src/test/ui/attributes/attrs-with-no-formal-in-generics-2.ds
// This test checks variations on `<#[attr] 'a, #[oops]>`, where
// `#[oops]` is left dangling (that is, it is unattached, with no
// formal binding following it).

#![feature(dustc_attrs)]

struct RefAny<'a, T>(&'a T);

impl<#[dustc_dummy] 'a, #[dustc_dummy] T, #[oops]> RefAny<'a, T> {}
//~^ ERROR trailing attribute after generic parameter

fn main() {}
